[package]
name = "rust_print_forge_3d"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.
name = "rust_print_forge_3d"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext" }
rust_data_table = { git = "https://github.com/stela2502/rust_data_table.git" }
rust_kmeans = { git = "https://github.com/stela2502/rust_kmeans.git" }
glam = "0.30.8"
stl_io = "0.8.5"
tri-mesh = "0.6.1"
parry3d = "0.15"
sprs = "0.11.3"
anyhow = "1.0.100"
flate2 = "1.1.4"
csv = "1.4.0"
ndarray = "0.16.1"
rayon = "1.11.0"
ordered-float = "5.1.0"
